<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OTPVerificationUsingFirebase</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_an_one_time_password_oonthis_mobile_number">we will send you an One time Password on this mobile number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="_91">+91-</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="didn_recieve_the_otp">Didn\' receive the OTP?</string>
    <string name="verify">Verify</string>
    <string name="_1234567890">1234567890</string>
</resources>