<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:overScrollMode="never"
    tools:context=".SendOTPActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="287dp"
            android:layout_height="186dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/png"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/we_will_send_you_an_one_time_password_oonthis_mobile_number"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/enter_mobile_number"
            android:textSize="15sp"
            android:textColor="@color/colorTextSecondary"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"

            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:gravity="center"
                android:text="@string/_91"
                android:textColor="@color/colorTextPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/inputMobile"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:background="@null"
                android:hint="@string/_1234567890"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/colorTextPrimary"
                android:textSize="16sp"
                android:textStyle="bold"

                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />


        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:background="@color/colorDivider"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:id="@+id/buttonGetOTP"
                android:background="@drawable/background_button"
                android:text="@string/get_otp"
                android:textColor="@color/colorwhite"
                android:textStyle="bold"
                android:textSize="18sp"
                />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="invisible" />

        </FrameLayout>




    </LinearLayout>

</ScrollView>