<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:overScrollMode="never"
    tools:context=".VerifyOTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="391dp"
            android:layout_height="186dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/page" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/enter_the_otp_sent_to"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:gravity="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="14sp"
            android:textStyle="bold"
            android:id="@+id/textMobile"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/inputCode1"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/inputCode2"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/inputCode3"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/inputCode4"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/inputCode5"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/inputCode6"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"

                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />


        </LinearLayout>


       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="20dp"
           android:gravity="center"
           android:orientation="horizontal"
           >
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/didn_recieve_the_otp"
               android:textColor="@color/colorTextSecondary"
               android:textSize="14sp"
               />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="8dp"
               android:text="@string/resend_otp"
               android:id="@+id/textResendOTP"
               android:textColor="@color/colorAccent"
               android:textStyle="bold"
               android:textSize="15sp"
               />






       </LinearLayout>
      <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <Button
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="50dp"
              android:id="@+id/buttonVerify"
              android:background="@drawable/background_button"
              android:text="@string/verify"
              android:textColor="@color/colorwhite"
              android:textStyle="bold"
              android:textSize="18sp"
              />
          <ProgressBar
              android:id="@+id/progressbar"
              android:layout_width="40dp"
              android:layout_height="40dp"
              android:layout_gravity="center"
              android:visibility="gone"/>



      </FrameLayout>




    </LinearLayout>

</ScrollView>